--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,11 +11,11 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: setup hugo
-      uses: peaceiris/actions-hugo@v2.6.0
+      uses: peaceiris/actions-hugo@v3
       with:
-        hugo-version: '0.108.0'
+        hugo-version: '0.119.0'
     - name: build site
-      run: hugo
+      run: hugo --minify
     - name: deploy to s3
       run: hugo deploy --force --maxDeletes -1
       env:
