--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,8 @@ jobs:
     - name: setup hugo
       uses: peaceiris/actions-hugo@v3
       with:
-        hugo-version: '0.124.0'
+        hugo-version: 'latest'
+        extended: true
     - name: build site
       run: hugo --minify
     - name: deploy to s3
