--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,19 +6,12 @@ on:
 
 jobs:
   build_and_deploy:
-    name: Deploy Hugo Website
+    name: Build and Deploy
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: setup hugo
-      uses: peaceiris/actions-hugo@v3
-      with:
-        hugo-version: '0.137.0'
-        extended: true
-    - name: build site
-      run: hugo --minify
-    - name: deploy to s3
-      run: hugo deploy
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.SCW_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.SCW_SECRET_ACCESS_KEY }}
+      - name: Build and deploy
+        uses: AlbertMorenoDEV/deploy-hugo-to-s3-action@v0.0.10
+        with:
+          hugo-version: 0.139.0
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
