--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,7 @@ jobs:
     name: Build and Deploy
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
       - name: Build and deploy
         uses: AlbertMorenoDEV/deploy-hugo-to-s3-action@v0.0.10
         with:
