Change deployment URL format in hugo.toml

--- a/hugo.toml
+++ b/hugo.toml
@@ -13,7 +13,7 @@ pygmentsCodefencesGuessSyntax = true
 [deployment]
   [deployment.targets]
     name = "production"
-    URL = "https://robzwitserlood.s3.nl-ams.scw.cloud"
+    URL = "s3://robzwitserlood.s3.nl-ams.scw.cloud"
 
 [Services]
   [Services.Disqus]
