--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,16 +23,16 @@ jobs:
 
       - name: Validate AWS secrets
         run: |
-          if [ -z "${{ secrets.AWS_ACCESS_KEY_ID }}" ] || [ -z "${{ secrets.AWS_SECRET_ACCESS_KEY }}" ]; then
-            echo "ERROR: Missing AWS credentials. Add AWS_ACCESS_KEY_ID and AWS_SECRET_ACCESS_KEY to repository secrets."
+          if [ -z "${{ secrets.SCW_ACCESS_KEY_ID }}" ] || [ -z "${{ secrets.SCW_SECRET_ACCESS_KEY }}" ]; then
+            echo "ERROR: Missing AWS credentials. Add SCW_ACCESS_KEY_ID and SCW_SECRET_ACCESS_KEY to repository secrets."
             exit 1
           fi
         shell: bash
       
       - name: Deploy to Scaleway
         env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.SCW_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.SCW_SECRET_ACCESS_KEY }}
           AWS_REGION: nl-ams
         run: hugo deploy --target=production
         shell: bash
