--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseurl = "https://robzwitserlood.s3.nl-ams.scw.cloud"
+baseurl = "http://robzwitserlood/"
 DefaultContentLanguage = "en"
 title = "Home"
 # Using theme as git submodule
@@ -12,8 +12,8 @@ pygmentsCodefencesGuessSyntax = true
 
 [deployment]
   [deployment.targets]
-    name = "robzwitserlood.s3.nl-ams.scw.cloud"
-    URL = "s3://robzwitserlood.s3.nl-ams.scw.cloud?endpoint=https://s3.nl-ams.scw.cloud&region=nl-ams"
+    name = "robzwitserlood"
+    URL = "s3://robzwitserlood?endpoint=https://s3.nl-ams.scw.cloud&region=nl-ams"
 
 [Services]
   [Services.Disqus]
