--- a/hugo.toml
+++ b/hugo.toml
@@ -71,7 +71,7 @@ pygmentsCodefencesGuessSyntax = true
 
 [[menu.main]]
     name = "Blog"
-    url = ""
+    url = "blog/"
     weight = 2
 
 [[menu.main]]
